force-app/main/default/objects/Action__c/Action__c.object-meta.xml
<CustomObject>
    <description>Cross-platform custom object designed to create basic details of actions to be performed</description>
    <label>Action</label>
    <nameField>
        <displayFormat>ACT-{00000}</displayFormat>
        <label>Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>