force-app/main/default/objects/Action__c/fields/Action_Description__c.field-meta.xml
<CustomField>
    <fullName>Action_Description__c</fullName>
    <description>Full details of action required and updates on it&apos;s progress</description>
    <inlineHelpText>Provide a full description of the action and add any updates to the end of the text</inlineHelpText>
    <label>Action Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>