force-app/main/default/objects/Action__c/fields/Action_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Parent_Name__c</fullName>
    <formula>IF(
NOT(ISBLANK(Performance_Management_Record__c)),
Performance_Management_Record__r.Name,
IF(
NOT(ISBLANK(Risk__c)),
Risk__r.Name,
IF(
NOT(ISBLANK(Fraud_Error__c)),
Fraud_Error__r.Name,
IF(
NOT(ISBLANK(Funding_Award__c)),
Funding_Award__r.Name,
&quot;No Parent&quot;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Parent Name</label>
    <type>Text</type>
</CustomField>