force-app/main/default/objects/Action__c/fields/Action_Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Parent_Type__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Performance_Management_Record__c)),
    &quot;Performance Management&quot;,
    IF(
        NOT(ISBLANK(Risk__c)),
        &quot;Risk&quot;,
        IF(
            NOT(ISBLANK(Fraud_Error__c)),
            &quot;Fraud&quot;,
            IF(
                NOT(ISBLANK(Funding_Award__c)),
                &quot;Funding Award&quot;,
                &quot;No Parent&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Parent Type</label>
    <type>Text</type>
</CustomField>