force-app/main/default/objects/Action__c/fields/Action_Source__c.field-meta.xml
<CustomField>
    <fullName>Action_Source__c</fullName>
    <description>Name of activity which triggered action</description>
    <label>Action Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DQA</fullName>
            </value>
            <value>
                <fullName>Performance Meeting</fullName>
            </value>
            <value>
                <fullName>Project Tiering</fullName>
            </value>
            <value>
                <fullName>DCA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>