force-app/main/default/objects/Action__c/fields/Action_Title__c.field-meta.xml
<CustomField>
    <fullName>Action_Title__c</fullName>
    <description>Short summary of Action purpose</description>
    <inlineHelpText>Please enter a short summary of the Action&apos;s purpose (max 255 characters)</inlineHelpText>
    <label>Action Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>