force-app/main/default/objects/Action__c/fields/DAC_Condition_RAG__c.field-meta.xml
<CustomField>
    <fullName>DAC_Condition_RAG__c</fullName>
    <label>DAC Condition RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>