force-app/main/default/objects/Action__c/fields/DAC_Theme__c.field-meta.xml
<CustomField>
    <fullName>DAC_Theme__c</fullName>
    <label>DAC Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery Assurance</fullName>
            </value>
            <value>
                <fullName>Commercial Assurance</fullName>
            </value>
            <value>
                <fullName>Fraud and Error Management</fullName>
            </value>
            <value>
                <fullName>Income Eligibility Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>