force-app/main/default/objects/Action__c/fields/Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Date__c</fullName>
    <description>Date that Action is due to be completed</description>
    <label>Deadline Date</label>
    <type>Date</type>
</CustomField>