force-app/main/default/objects/Action__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date that Action is due to be completed</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>