force-app/main/default/objects/Action__c/fields/Escalate__c.field-meta.xml
<CustomField>
    <fullName>Escalate__c</fullName>
    <label>Escalate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>