force-app/main/default/objects/Action__c/fields/Fraud_Error__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Error__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fraud record that Action record relates to</description>
    <label>Fraud &amp; Error</label>
    <referenceTo>Fraud_Error__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>