force-app/main/default/objects/Action__c/fields/Internal_Edit_Only__c.field-meta.xml
<CustomField>
    <fullName>Internal_Edit_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Edit Only</label>
    <type>Checkbox</type>
</CustomField>