force-app/main/default/objects/Action__c/fields/Internal_Parent__c.field-meta.xml
<CustomField>
    <fullName>Internal_Parent__c</fullName>
    <formula>Fraud_Error__r.Record_Type_Name__c = &apos;Internally Generated&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal_Parent</label>
    <type>Checkbox</type>
</CustomField>