force-app/main/default/objects/Action__c/fields/Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Date__c</fullName>
    <formula>DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated Date</label>
    <type>Date</type>
</CustomField>