force-app/main/default/objects/Action__c/fields/Owning_Team__c.field-meta.xml
<CustomField>
    <fullName>Owning_Team__c</fullName>
    <label>Owning Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery Partner</fullName>
            </value>
            <value>
                <fullName>DESNZ Scheme Lead</fullName>
            </value>
            <value>
                <fullName>Grant Recipient Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>