force-app/main/default/objects/Action__c/fields/Performance_Management_Record__c.field-meta.xml
<CustomField>
    <fullName>Performance_Management_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Management Record</label>
    <referenceTo>Funding_Award_Performance_Management__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>