force-app/main/default/objects/Action__c/fields/Progress_Update__c.field-meta.xml
<CustomField>
    <fullName>Progress_Update__c</fullName>
    <defaultValue>&quot;No update provided yet&quot;</defaultValue>
    <description>Update on progress of Action</description>
    <label>Progress Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>