force-app/main/default/objects/Action__c/fields/Resolution_Update__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Update__c</fullName>
    <description>Long Text Field to capture any additional information on resolution of action</description>
    <label>Resolution Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>