force-app/main/default/objects/Action__c/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Risk record that this action is to be used for</description>
    <label>Risk</label>
    <referenceTo>Risk_Register__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>