force-app/main/default/objects/Action__c/fields/Set_Overdue_Check__c.field-meta.xml
<CustomField>
    <fullName>Set_Overdue_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Overdue Check</label>
    <type>Checkbox</type>
</CustomField>