force-app/main/default/objects/Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Funding_Award__c</columns>
    <columns>Action_Title__c</columns>
    <columns>Action_Description__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Action_Source__c</columns>
    <columns>Owning_Team__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>