force-app/main/default/objects/Action__c/listViews/My_Assigned_Actions.listView-meta.xml
<ListView>
    <fullName>My_Assigned_Actions</fullName>
    <columns>NAME</columns>
    <columns>Action_Title__c</columns>
    <columns>Action_Description__c</columns>
    <columns>Owning_Team__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Due_Date__c</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Assigned Actions</label>
</ListView>