force-app/main/default/objects/Action__c/listViews/Open_Actions_SHF.listView-meta.xml
<ListView>
    <fullName>Open_Actions_SHF</fullName>
    <columns>NAME</columns>
    <columns>Funding_Award__c</columns>
    <columns>Action_Title__c</columns>
    <columns>Action_Description__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Action_Source__c</columns>
    <columns>Owning_Team__c</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Funding_Award__c</field>
        <operation>startsWith</operation>
        <value>SHF</value>
    </filters>
    <label>Open Actions - SHF</label>
    <sharedTo>
        <group>Digital_Modus</group>
        <group>SHF_User</group>
    </sharedTo>
</ListView>